aster/tests/fail/bad-signature-use-2.astr
module bad-signature-use-2

attributes

  def foo(a) =
    a.signature
